# chiaki-nx

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
gui/src/: settings.cpp
gui/src/qml/: SettingsDialog.qml
lib/include/chiaki/: frameprocessor.h  session.h
lib/src/: ctrl.c  fec.c  frameprocessor.c  session.c  takion.c  thread.c  videoreceiver.c
lib/src/remote/: holepunch.c
scripts/switch/: build.sh
switch/: CMakeLists.txt  README.md
switch/include/: audren_audio.h  deko_video_renderer.h  discoverymanager.h  gui.h  host.h  io.h  microphone.h  settings.h
switch/include/views/: enter_pin_view.h  ps_remote_play.h
switch/res/: inter
switch/src/: audren_audio.cpp  deko_video_renderer.cpp  discoverymanager.cpp  gui.cpp  host.cpp  io.cpp  main.cpp  microphone.cpp  settings.cpp
switch/src/deko3d/: texture_dither_fsh.glsl  texture_fsh.glsl
switch/src/views/: enter_pin_view.cpp  ps_remote_play.cpp
